# buffr_cmake

./: .gitmodules  CMakeLists.txt  README
include/: main.h
src/: main.cpp
